--- a/static/home.css
+++ b/static/home.css
@@ -1,10 +1,10 @@
 .container {
     max-width: none;
     gap: 34px;
-    height: 650px;
+    height: calc(82vh);
     background-repeat: no-repeat;
     background-image: url("/images/background-blue.png");
-    background-size: 100% 650px;
+    background-size: 100% calc(82vh);
     display: flex;
     flex-direction: column;
     align-items: center;
