--- a/static/styles.css
+++ b/static/styles.css
@@ -50,7 +50,7 @@ h2 {
 
 h3 {
     font-weight: 600;
-    font-size: 36px;
+    font-size: 26px;
     line-height: 31.2px;
 }
 
@@ -88,13 +88,14 @@ nav {
     min-width: 160px;
     line-height: 19.2px;
     text-align: center;
-    background-color: linear-gradient(#ff6a56, #fdaf4d);
+    background: linear-gradient(#ff6a56, #fdaf4d);
     border-radius: 8px;
     box-shadow: 0px 8px 30px 0px #0a021733;
+    background: linear-gradient(to right, #ff6a56, #fdaf4d);
+}
 
-    :hover {
-        background-color: linear-gradient(#fdaf4d, #ff6a56);
-    }
+.btn-coloured:hover {
+    background: linear-gradient(to right,#fdaf4d, #ff6a56);
 }
 
 .btn-black-lined {
@@ -151,6 +152,32 @@ nav {
     border-radius: 8px;
 }
 
+.btn-icon {
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    border-width: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @apply bg-text-white  border-text-dark text-text-dark
+    
+}
+.btn-icon svg {
+    transition: stroke 0.3s ease;
+    stroke: theme("colors.current"); /* Change to desired color */
+}
+
+.btn-icon:hover svg {
+    stroke: theme('colors.white'); /* Change to desired hover color */
+}
+.btn-icon:disabled {
+    opacity: 0.5;
+}
+.btn-icon:hover {
+    @apply bg-text-dark  border-text-dark text-text-white
+}
+
 .dot {
     height: 5px;
     width: 5px;
@@ -172,4 +199,20 @@ nav {
     background: #805eff;
     bottom: 0;
     z-index: -1;
+}
+
+.basic-flex-container {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid-container-service-cards {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-template-rows: max-content max-content;
+    grid-column-gap: 30px;
+    grid-row-gap: 20px;
 }
