:zap: Another section - 7 easy steps to land in new new university

--- a/static/styles.css
+++ b/static/styles.css
@@ -76,7 +76,7 @@ nav {
     z-index: 1000;
     background: #6c48f0;
     display: flex;
-    padding: 36px;
+    padding: 26px;
     gap: 32px;
     width: 100vw;
     align-items: center;
@@ -215,4 +215,17 @@ nav {
     grid-template-rows: max-content max-content;
     grid-column-gap: 30px;
     grid-row-gap: 20px;
+}
+
+.arrow-icon {    
+    top: -16px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 44px;
+
+    background-color: white;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
 }
