--- a/static/webinar.css
+++ b/static/webinar.css
@@ -53,3 +53,54 @@ gap: 30px;
     float:left;
     margin-right:30px
 }
+
+.webinar-card-desc {
+    @apply flex flex-col gap-[15px] mt-[20px]
+}
+
+@media (max-width: 375px) {
+    .webinar-container  {
+        grid-template-columns: 300px 300px  300px ;
+        grid-template-rows: 500px;
+        height: 100%;
+        width: 100%;
+        overflow-x: auto;
+        padding:20px;
+    }   
+        .webinar-card:nth-child(1) {
+            grid-column-start: 1;
+            grid-row-start: 1;
+        }
+        
+        .webinar-card:nth-child(1) img {
+            width: 300px;
+            height: 200px;
+        }
+        
+        .webinar-card:nth-child(2) {
+            grid-column-start:2;
+        }
+        
+        .webinar-card:nth-child(2) img {
+            width: 300px;
+            height: 200px;
+            margin-right:30px;
+            float: unset;
+        }
+        
+        .webinar-card:nth-child(3) {
+            grid-column-start: 3;
+            grid-row-start: 1;
+        }
+        
+        
+        .webinar-card:nth-child(3) img {
+            width: 300px;
+            height: 200px;
+            float: unset;
+
+        }
+        .webinar-card-desc {
+            padding: 12px
+        }
+}
