--- a/static/styles.css
+++ b/static/styles.css
@@ -294,6 +294,11 @@ nav {
     @apply flex flex-row justify-center items-center gap-[40px] mt-[76px]
 }
 
+.our-student-card {
+    transition: 1.5s ease-in-out;
+    @apply flex flex-col gap-[22px] shadow-card p-[30px] rounded-[10px] w-[370px] h-[340px] bg-text-white absolute
+}
+
 @media (max-width: 375px) {
     .desktop {
         display: none;
@@ -351,6 +356,10 @@ nav {
     }
     .dream-university-card-container::after {
         display: none;
+    }
+    .our-student-card{
+        width: 280px;
+        height: 320px;
     }
 }
 
