--- a/static/styles.css
+++ b/static/styles.css
@@ -299,6 +299,17 @@ nav {
     @apply flex flex-col gap-[22px] shadow-card p-[30px] rounded-[10px] w-[370px] h-[340px] bg-text-white absolute
 }
 
+.latest-updates-card {
+    @apply w-[270px] h-[500px] shadow-card rounded-[10px] p-[15px] flex flex-col items-center gap-[26px] text-center;
+}
+
+.latest-updates-card-container {
+    @apply mt-[40px] flex flex-row gap-[22px]
+}
+
+.latest-updates-card-hiring {
+    @apply w-[570px] h-[500px] shadow-card rounded-[10px] p-[50px] bg-yellow-100 gap-[22px] flex flex-col
+}
 @media (max-width: 375px) {
     .desktop {
         display: none;
@@ -313,6 +324,10 @@ nav {
     h1 {
         font-size: 26px;
         line-height: 33.8px;
+    }
+    h4 {
+        font-size: 16px;
+        line-height: 25.6px;
     }
     p{
         font-size: 16px;
@@ -360,6 +375,17 @@ nav {
     .our-student-card{
         width: 280px;
         height: 320px;
+    }
+    .latest-updates-card {
+        min-width:270px;
+    }
+    .latest-updates-card-hiring {
+        width: 300px
+    }
+    .latest-updates-card-container {
+        overflow-x: auto;
+        width: 100%;
+        padding:20px
     }
 }
 
