--- a/static/styles.css
+++ b/static/styles.css
@@ -316,6 +316,18 @@ nav {
 }
 
 
+.students-love-arrow-left {
+    @apply absolute rotate-[180deg] top-[50%] left-[50px]
+}
+
+.students-love-arrow-right  {
+    @apply absolute right-[50px] top-[50%];
+
+}
+.our-student-container {
+   @apply relative pt-[120px] pb-[120px] bg-orange-30 items-center flex flex-col gap-[40px] h-[750px]
+}
+
 @media (max-width: 375px) {
     .desktop {
         display: none;
@@ -386,6 +398,17 @@ nav {
     .our-student-card{
         width: 280px;
         height: 320px;
+        left: 35px !important;
+        margin-top: 0 !important;
+    }
+    .our-student-card p {
+        font-size: 14px;
+        line-height: 21px;
+    }
+    .our-student-container {
+        padding-top: 80px;
+        padding-bottom: 80px;
+        height: 615px;
     }
     .latest-updates-card {
         min-width:270px;
@@ -414,6 +437,16 @@ nav {
     }
     .footer-inputbox {
         flex-direction: column;
+      }
+
+      .students-love-arrow-left {
+        left: 0;
+      }
+      .students-love-arrow-right {
+        right:0;
+      }
+      .cCarousel-inner {
+        width: 352px;
       }
 }
 
