:zap: Version two for compound interest calculator. Update logo, theme algorithm logic etc.

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@layer base {
+    ul, ol {
+        list-style: s;
+        list-style-position: inside;
+    }
+}
 @font-face {
     font-family: BuenosAires;
     src: url("/fonts/buenosairesweb-regular.woff2");
@@ -34,39 +39,10 @@
 
 input {
     border: 1px solid black;
-    margin: 5px
+    margin: 5px;
 }
 body {
     font-family: BuenosAires;
-}
-
-h1 {
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 31.2px;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 50.4px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 31.2px;
-}
-
-h4 {
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 33px;
-}
-h5 {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25.2px;
 }
 
 p {
@@ -87,183 +63,50 @@ tr {
     border-bottom: 1px solid black;
 }
 td {
-    padding:5px;
+    padding: 5px;
     border-right: 1px solid black;
-    padding:5px;
-}
-
-nav {
-    position: fixed;
-    z-index: 1000;
-    background: #6c48f0;
-    display: flex;
-    padding: 26px;
-    gap: 32px;
-    width: 100vw;
-    align-items: center;
-    @apply text-white
+    padding: 5px;
 }
 
 .btn-coloured {
-    height: 48px;
+    height: 33.2px;
     min-width: 160px;
     line-height: 19.2px;
     text-align: center;
-    background: linear-gradient(#ff6a56, #fdaf4d);
-    border-radius: 8px;
-    /* box-shadow: 0px 8px 30px 0px #0a021733; */
-    background: linear-gradient(to right, #ff6a56, #fdaf4d);
+    background: #284cd4;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
 }
 
 .btn-coloured:hover {
-    background: linear-gradient(to right,#fdaf4d, #ff6a56);
+    background: #0433e2;
+    color: white;
 }
 
-.btn-black-lined {
-    font-weight: 600;
-    height: 48px;
-    min-width: 160px;
-    line-height: 19.2px;
-    text-align: center;
-    color: #0e1b2c;
-    border-radius: 8px;
-    box-shadow: 0px 8px 30px 0px #0a021733;
-
-    :hover {
-        color: #ffffff;
-        background-color: #0e1b2c;
-    }
+.btn-coloured:disabled {
+    opacity: 50%;
 }
-
-.btn-white-lined {
-    font-weight: 600;
-    height: 48px;
-    min-width: 160px;
-    line-height: 19.2px;
-    text-align: center;
-    color: #ffffff;
-    border: 1px solid #ffffff;
-    border-radius: 8px;
-
-    :hover {
-        color: #ff7361;
-        background-color: #ffffff;
-    }
-}
-
-.btn-orange-lined {
-    font-weight: 600;
-    height: 48px;
-    min-width: 160px;
-    line-height: 19.2px;
-    text-align: center;
-    color: #ff7361;
-    border: 1px solid #ff7361;
-    border-radius: 8px;
-}
-
 .btn-text {
     font-weight: 600;
     width: min-content;
     font-size: 16px;
-    line-height: 19.2px;
+    line-height: 31.2px;
     text-align: center;
     color: #ff7361;
     border: 1px solid #ff7361;
-    border-radius: 8px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.btn-icon {
-    height: 48px;
-    width: 48px;
-    border-radius: 50%;
-    border-width: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @apply bg-text-white  border-text-dark text-text-dark
-    
-}
-.btn-icon svg {
-    transition: stroke 0.3s ease;
-    stroke: theme("colors.current"); /* Change to desired color */
-}
-
-.btn-icon:hover svg {
-    stroke: theme('colors.white'); /* Change to desired hover color */
-}
-.btn-icon:disabled {
-    opacity: 0.5;
-}
-.btn-icon:hover {
-    @apply bg-text-dark  border-text-dark text-text-white
-}
-
-.dot {
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-}
-
-.inputContainer {
-    display: flex;
-    flex-direction: column;
-    width:200px;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding:10px
-}
-
-@media (max-width: 375px) {
-    .desktop {
-        display: none;
-    }
-    nav img {
-        height: 26px !important;
-        width: 118px;
-    }
-    nav {
-        padding: 20px;
-    }
-    h1 {
-        font-size: 26px;
-        line-height: 33.8px;
-    }
-    h2 {
-        font-size: 22px;
-        line-height: 31.2px;
-        text-align: center;
-    }
-    h4 {
-        font-size: 16px;
-        line-height: 25.6px;
-    }
-    p{
-        font-size: 16px;
-        line-height: 25.6px;
-        max-width: 100% !important;
-    }
-    
-}
-
-@media (min-width: 376px) {
-        .mobile {
-            display: none;
-        }
-}
 @media print {
     body {
-      visibility: hidden;
+        visibility: hidden;
     }
     .section-to-print {
-      visibility: visible;
-      position: absolute;
-      left: 0;
-      top: 0;
+        visibility: visible;
+        position: absolute;
+        left: 0;
+        top: 0;
     }
-  }
-  
+}
